File Conging Error

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <meta property="og:title" content="Future solutions" />
     <meta property="og:image" content="/Img/icons/96.png" />
     <meta property="og:url" content="https://futuresolutionsdev.com" />
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Future Solutions">
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Future Solutions" />
     <!-- Twitter  -->
     <meta name="twitter:title" content="Future solutions" />
     <meta name="twitter:image" content="/Img/icons/96.png" />
@@ -95,6 +95,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/Config.js"></script>
+    <script type="module" src="/Config.js"></script>
   </body>
 </html>
